--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -31,6 +31,21 @@
   align-items: center;
 }
 
+.cardbox {
+  padding: 40px;
+  background: #fff;
+  border-radius: 20px;
+  cursor: pointer;
+  box-shadow: 0 5px 10px rgba(154, 160, 185, 0.05),
+    0 15px 40px rgba(166, 173, 201, 0.2);
+
+  transition: transform 250ms;
+}
+
+.cardbox:hover {
+  transform: translateY(-10px);
+}
+
 @media (max-width: 600px) {
   .grid {
     width: 100%;
