--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -66,6 +66,24 @@ textarea {
     0 15px 40px rgba(166, 173, 201, 0.2);
 }
 
+.card-sidebar {
+  padding: 30px;
+  background: #fff;
+  border-radius: 15px;
+  box-shadow: 0 5px 10px rgba(154, 160, 185, 0.05),
+    0 15px 40px rgba(166, 173, 201, 0.2);
+  margin-bottom: 1rem;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  transition: transform 350ms;
+}
+.card-sidebar:hover {
+  transform: translateX(10px);
+}
+
 .text-general {
   color: #252525;
 }
